crates/frontend/tests/snapshots/lower_mir__lower_spill_ghosted.snap
---
source: crates/frontend/tests/lower_mir.rs
expression: "lower_to_mir(\"finna main() { spill.it(ghosted) }\")"
---
extern "C" fn bet_print(rawptr, u64) -> void

fn main() -> void {
  let %0: rawptr
  let %1: u64
  let %2: void
  let %3: rawptr
  let %4: u64
  let %5: void
  bb0:
    %0 = str_ptr("ghosted")
    %1 = str_len("ghosted")
    %2 = call_extern @bet_print(%0, %1)
    %3 = str_ptr("\n")
    %4 = str_len("\n")
    %5 = call_extern @bet_print(%3, %4)
    return
}
